--- a/BookNow/index.html
+++ b/BookNow/index.html
@@ -13,7 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, minimum-scale=1">
 
     <!-- Local CSS -->
-    <link rel="stylesheet" href="../style/homestyle.css">
+    <link rel="stylesheet" href="../style/homestyle.v2.css">
 
     <!-- Local Scripts -->
     <script src="../javascript/homescript.js"></script>
