--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1, minimum-scale=1">
 
     <!-- Local CSS -->
-    <link rel="stylesheet" href="./style/homestyle.css">
+    <link rel="stylesheet" href="./style/homestyle.v2.css">
 
     <!-- Local Scripts -->
     <script src="./javascript/homescript.js"></script>
@@ -80,7 +80,7 @@
 
     <div id="homePage">
       <div>
-        <img id="banner" class="banner-image" src="./images/home/mainBanner.jpg">
+        <img id="banner" class="banner-image" src="./images/home/mainBanner.v2.jpg">
       </div>
 
       <h1 class="forbesH1" style="margin-bottom: 0px" id="serviceMenu">SERVICE MENU</h1>
